# mini-interpreter

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake_build.yml
compiler/core/ast/: tree_module.cpp  tree_module.h
compiler/core/interpreter/: interpreter.cpp  interpreter.h
compiler/core/lexer/: lexer.cpp  tokens.cpp  tokens.h
compiler/core/parser/: lexer.cpp  lexer.h  parser.cpp  parser.h  symbol.cpp  symbol.h  tokens.cpp  tokens.h
compiler/utils/: mapper.cpp  mapper.h
interpreter/core/interpreter/: interpreter.cpp  interpreter.h
interpreter/core/lexer/: lexer.cpp  lexer.h
interpreter/core/parser/: symbol.cpp
interpreterUnstructured/: program_control_flow.py
interpreterUnstructured/core/language_constructs/containers/: containers.py
interpreterUnstructured/core/language_constructs/functions/: function.py  function_call.py
interpreterUnstructured/core/language_constructs/objects/: object_types.py
interpreterUnstructured/core/parser/: parser.py
interpreterUnstructured/core/program_state/: program_state_.py
interpreterUnstructured/core/program_state/symbol_table/: symbol_table.py
src/: repl.cpp
src/core/ast/: tree_module.cpp  tree_module.h
src/core/interpreter/: interpreter.cpp  interpreter.h
src/core/lexer/: lexer.cpp  tokens.cpp  tokens.h
src/core/parser/: parser.cpp  symbol.h
tests/: CMakeLists.txt  tests.cpp  tests_input.json
